inicia bs + sass

--- a/paginas/COLECCIONES.html
+++ b/paginas/COLECCIONES.html
@@ -5,8 +5,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GamingHub/COLLECCIONES</title>
-    <link rel="stylesheet" href="../estilo.css" />
+
+    <title>GamingHub - Colecciones completas de juegos</title>
+    <meta name="description" content="Tus sagas favoritas completas y ordenadas">
+    <meta name="keywords" content="Juegos , sagas , colecciones , collections , games">
+
+
+    <link rel="stylesheet" href="../css/estilo.css" />
     <link rel="shortcut icon" href="../imagenes/unnamed.jpg">
 
     <script src="https://kit.fontawesome.com/2cb25f2c39.js">
@@ -50,21 +55,38 @@
         <h2 class="h2">Assassins Creed </h2>
         <section class="section-barra">
             <div><img src="https://gamesfull.app/almacenamiento/2020/05/assassins-creed-directors-cut-6522-poster-193x288.jpg" alt="Assassins Creed" HSPACE="5" VSPACE="5"><p>Assasins Creed</p></div>
-            <div><img src="https://gamesfull.app/almacenamiento/2020/05/assassins-creed-ii-deluxe-edition-6529-poster-193x288.jpg" alt="Assassins Creed" HSPACE="5" VSPACE="5"><p>Assassins Creed 2</p></div>
-            <div><img src="https://gamesfull.app/almacenamiento/2020/05/assassins-creed-brotherhood-complete-edition-6590-poster-193x288.jpg" alt="Assassins Creed" HSPACE="5" VSPACE="5"><p>Assassins Creed Brotherhood</p></div>   
-            <div><img src="https://gamesfull.app/almacenamiento/2020/05/assassins-creed-revelations-gold-edition-6597-poster-193x288.jpg" HSPACE="5" VSPACE="5"><p>Assasins Creed revelations complete edition</p></div>
-            <div><img src="https://gamesfull.app/almacenamiento/2020/05/assassins-creed-iii-complete-edition-6560-poster-193x288.jpg" alt="Assassins Creed" HSPACE="5" VSPACE="5"><p>Assassins Creed iii complete edition</p></div>
-            <div><img src="https://gamesfull.app/almacenamiento/2020/05/assassins-creed-iv-black-flag-jackdaw-edition-6575-poster-193x288.jpg" alt="Assassins Creed" HSPACE="5" VSPACE="5"><p>Assassins Creed iv black flag jackdaw edition</p></div>
-            <div><img src="https://gamesfull.app/almacenamiento/2020/05/assassins-creed-liberation-hd-6604-poster-193x288.jpg" alt="Assassins Creed" HSPACE="5" VSPACE="5"><p>Assassins Creed liberation</p></div>
-            <div><img src="https://gamesfull.app/almacenamiento/2020/05/assassins-creed-unity-gold-edition-6626-poster-193x288.jpg" alt="Assassins Creed" HSPACE="5" VSPACE="5"><p>Assassins Creed unity gold edition</p></div>
-            <div><img src="https://gamesfull.app/almacenamiento/2020/05/assassins-creed-rogue-6612-poster-193x288.jpg" alt="Assassins Creed" HSPACE="5" VSPACE="5"><p>Assassins Creed rogue</p></div>
-            <div><img src="https://gamesfull.app/almacenamiento/2020/05/assassins-creed-chronicles-trilogy-6619-poster-193x288.jpg" alt="Assassins Creed" HSPACE="5" VSPACE="5"><p>Assassins Creed chronicles trilogy</p></div>
-            <div><img src="https://gamesfull.app/almacenamiento/2020/05/assassins-creed-syndicate-gold-edition-6642-poster-193x288.jpg" alt="Assassins Creed" HSPACE="5" VSPACE="5"><p>Assassins Creed syndicate gold edition</p></div>
-            <div><img src="https://gamesfull.app/almacenamiento/2020/07/DVD-6-193x288.jpg" alt="Assassins Creed" HSPACE="5" VSPACE="5"><p>Assassins Creed origins gold edition </p></div>
-            <div><img src="https://gamesfull.app/almacenamiento/2020/05/assassins-creed-iii-remastered-10090-poster-193x288.jpg" alt="Assassins Creed" HSPACE="5" VSPACE="5"><p>Assassins Creed odyssey ultimate edition</p></div>
-            <div><img src="https://gamesfull.app/almacenamiento/2021/03/Assassins-Creed-Valhalla-193x288.jpg" alt="Assassins Creed" HSPACE="5" VSPACE="5"><p>Assassins Creed valhalla</p></div>
+            <div><img src="https://gamesfull.app/almacenamiento/2020/05/assassins-creed-ii-deluxe-edition-6529-poster-193x288.jpg" alt="Assassins Creed 2" HSPACE="5" VSPACE="5"><p>Assassins Creed 2</p></div>
+            <div><img src="https://gamesfull.app/almacenamiento/2020/05/assassins-creed-brotherhood-complete-edition-6590-poster-193x288.jpg" alt="Assassins Creed Brotherhood" HSPACE="5" VSPACE="5"><p>Assassins Creed Brotherhood</p></div>   
+            <div><img src="https://gamesfull.app/almacenamiento/2020/05/assassins-creed-revelations-gold-edition-6597-poster-193x288.jpg" alt="Assasins Creed revelations" HSPACE="5" VSPACE="5"><p>Assasins Creed revelations complete edition</p></div>
+            <div><img src="https://gamesfull.app/almacenamiento/2020/05/assassins-creed-iii-complete-edition-6560-poster-193x288.jpg" alt="Assassins Creed 3" HSPACE="5" VSPACE="5"><p>Assassins Creed iii complete edition</p></div>
+            <div><img src="https://gamesfull.app/almacenamiento/2020/05/assassins-creed-iv-black-flag-jackdaw-edition-6575-poster-193x288.jpg" alt="Assassins Creed 4" HSPACE="5" VSPACE="5"><p>Assassins Creed iv black flag jackdaw edition</p></div>
+            <div><img src="https://gamesfull.app/almacenamiento/2020/05/assassins-creed-liberation-hd-6604-poster-193x288.jpg" alt="Assassins Creed liberation" HSPACE="5" VSPACE="5"><p>Assassins Creed liberation</p></div>
+            <div><img src="https://gamesfull.app/almacenamiento/2020/05/assassins-creed-unity-gold-edition-6626-poster-193x288.jpg" alt="Assassins Creed unity" HSPACE="5" VSPACE="5"><p>Assassins Creed unity gold edition</p></div>
+            <div><img src="https://gamesfull.app/almacenamiento/2020/05/assassins-creed-rogue-6612-poster-193x288.jpg" alt="Assassins Creed rogue" HSPACE="5" VSPACE="5"><p>Assassins Creed rogue</p></div>
+            <div><img src="https://gamesfull.app/almacenamiento/2020/05/assassins-creed-chronicles-trilogy-6619-poster-193x288.jpg" alt="Assassins Creed trilogy" HSPACE="5" VSPACE="5"><p>Assassins Creed chronicles trilogy</p></div>
+            <div><img src="https://gamesfull.app/almacenamiento/2020/05/assassins-creed-syndicate-gold-edition-6642-poster-193x288.jpg" alt="Assassins Creed syndicate" HSPACE="5" VSPACE="5"><p>Assassins Creed syndicate gold edition</p></div>
+            <div><img src="https://gamesfull.app/almacenamiento/2020/07/DVD-6-193x288.jpg" alt="Assassins Creed origins" HSPACE="5" VSPACE="5"><p>Assassins Creed origins gold edition </p></div>
+            <div><img src="https://gamesfull.app/almacenamiento/2020/05/assassins-creed-iii-remastered-10090-poster-193x288.jpg" alt="Assassins Creed odtssey" HSPACE="5" VSPACE="5"><p>Assassins Creed odyssey ultimate edition</p></div>
+            <div><img src="https://gamesfull.app/almacenamiento/2021/03/Assassins-Creed-Valhalla-193x288.jpg" alt="Assassins Creed valhalla" HSPACE="5" VSPACE="5"><p>Assassins Creed valhalla</p></div>
+        </section>
 
-        </main>
+        <h2 class="h2">Dead Space </h2>
+        <section class="section-barra">
+            <div><img src="https://gamesfull.app/almacenamiento/2020/05/dead-space-2613-poster-193x288.jpg" alt="Dead space 1" HSPACE="5" VSPACE="5"><p>Dead Space</p></div>
+            <div><img src="https://gamesfull.app/almacenamiento/2020/05/dead-space-2-2603-poster-193x288.jpg" alt="Dead space 2" HSPACE="5" VSPACE="5"><p>Dead Space 2</p></div>
+            <div><img src="https://gamesfull.app/almacenamiento/2020/05/dead-space-3-2503-poster-193x288.jpg" alt="Dead space 3" HSPACE="5" VSPACE="5"><p>Dead Space 3</p></div>
+        </section>
+        
+        <h2 class="h2">Fallout</h2>
+        <section class="section-barra">
+            <div><img src="https://gamesfull.app/almacenamiento/2020/05/fallout-new-vegas-ultimate-edition-6925-poster-193x288.jpg" alt="Fallout New Vegas Ultimate Edition" HSPACE="5" VSPACE="5"><p>Fallout New Vegas</p></div>
+            <div><img src="https://gamesfull.app/almacenamiento/2020/05/fallout-2-6909-poster-193x288.jpg" alt="Fallout 2" HSPACE="5" VSPACE="5"><p>Fallout 2</p></div>
+            <div><img src="https://gamesfull.app/almacenamiento/2020/05/fallout-3-game-of-the-year-edition-6917-poster-193x288.jpg" alt= "Fallout 3 Game of the Year Edition" HSPACE="5" VSPACE="5"><p>Fallout 3 GOYE</p></div>
+            <div><img src="https://gamesfull.app/almacenamiento/2020/06/fallout-4-game-of-the-year-edition-2413-poster-193x288.jpg" alt="Fallout 4 Game of the Year Edition" HSPACE="5" VSPACE="5"><p>Fallout 4 GOYE</p></div>
+            <div><img src="https://gamesfull.app/almacenamiento/2020/05/fallout-shelter-3989-poster-193x288.jpg" alt="Fallout Shelter" HSPACE="5" VSPACE="5"><p>Fallout Shelter</p></div>
+        </section>
+
+    </main>
 
 
 
