--- a/paginas/JUEGOS.html
+++ b/paginas/JUEGOS.html
@@ -5,8 +5,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GamingHub/JUEGOS</title>
-    <link rel="stylesheet" href="../estilo.css" />
+
+    <title>GamingHub - Galeria de juegos, todo tipo</title>
+    <meta name="description" content="Tus entregas favoritas de forma rapida y completa">
+    <meta name="keywords" content="descargar, download, juegos, games, torrent, gaming, search, buscar">
+
+    <link rel="stylesheet" href="../css/estilo.css" />
     <link rel="shortcut icon" href="../imagenes/unnamed.jpg">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"><!--logo del icono buscar -->
 
@@ -100,9 +104,9 @@
         <section>
             <div class="juegos">
                 <div><img src="https://gamesfull.app/almacenamiento/2021/07/Resident-Evil-Village-193x288.jpg" alt="Juegos"HSPACE="5" VSPACE="5"><p>Resident Evil Village</p></div> 
-                <div><a href="../paginasJuegos/DevilMayCry5.html"><img src="../imagenes/juegoslogos/devil-may-cry-5-deluxe-edition-9589-poster.jpg" alt="Juegos"HSPACE="5" VSPACE="5"><p>Devil May Cry 5 Special Edition</p></a></div>
+                <div><img src="../imagenes/juegoslogos/devil-may-cry-5-deluxe-edition-9589-poster.jpg" alt="Juegos"HSPACE="5" VSPACE="5"><a href="../paginasJuegos/DevilMayCry5.html"><p>Devil May Cry 5 Special Edition</p></a></div>
                 <div><img src="https://gamesfull.app/almacenamiento/2022/10/A-Plague-Tale-Requiem-193x288.jpg" alt="Juegos"HSPACE="5" VSPACE="5"><p>A Plage Tale Requiem</p></div>
-                <div><a href="../paginasJuegos/Control.html"><img src="../imagenes/juegoslogos/control-11377-poster.jpg" alt="Juegos"HSPACE="5" VSPACE="5"><p>Control Ultimate Edition</p></a></div>
+                <div><img src="../imagenes/juegoslogos/control-11377-poster.jpg" alt="Juegos"HSPACE="5" VSPACE="5"><a href="../paginasJuegos/Control.html"><p>Control Ultimate Edition</p></a></div>
                 <div><img src="https://gamesfull.app/almacenamiento/2020/04/devil-may-cry-4-special-edition-964-poster.jpg" alt="Juegos"HSPACE="5" VSPACE="5"><p>Devil May Cry 4 Special Edition</p></div>
             </div> 
         </section>
