--- a/paginasJuegos/DevilMayCry5.html
+++ b/paginasJuegos/DevilMayCry5.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GamingHub/DevilMayCry5</title>
-    <link rel="stylesheet" href="../estilo.css" />
+    <link rel="stylesheet" href="../css/estilo.css" />
     <link rel="shortcut icon" href="../imagenes/unnamed.jpg">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"><!--logo del icono buscar -->
 
