--- a/paginas/JUEGOS.html
+++ b/paginas/JUEGOS.html
@@ -116,7 +116,7 @@
     <footer>
 
         <div class="border">
-            <a href="JUEGOS.HTML">
+            <a href="../paginas/JUEGOS.html">
                 <img src="../imagenes/unnamed.jpg" alt="inicio">
             </a>
         </div>     
